More spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,9 @@ a.nav-link {
   margin-top: 25px;
 }
 
+#resume iframe {
+  padding-left: 200px;
+}
 /*
 #section4  h2 {
 	margin-left: -4px;
